// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Org unit profile (location details) renders OrgUnitInfo 1`] = `
<div>
  <div
    class="info"
    data-test="org-unit-info"
  >
    <h3>
      Port Loko
    </h3>
    <div
      class="level"
    >
      <svg
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6 1v4H4v2h6V6h4v4h-4V8H4v4h6v-1h4v4h-4v-2H3.5a.5.5 0 01-.492-.41L3 12.5V5H2V1zm7 11h-2v2h2zm0-5h-2v2h2zM5 2H3v2h2z"
          fill="currentColor"
        />
      </svg>
      Level
      :
       
      District (2)
    </div>
    <div
      class="level"
    >
      <svg
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6 1v4H4v2h6V6h4v4h-4V8H4v4h6v-1h4v4h-4v-2H3.5a.5.5 0 01-.492-.41L3 12.5V5H2V1zm7 11h-2v2h2zm0-5h-2v2h2zM5 2H3v2h2z"
          fill="currentColor"
        />
      </svg>
      Parent
      : 
      Sierra Leone
    </div>
    <div
      class="desc"
    >
      The district of Port Loko
    </div>
    <div
      class="list"
    >
      <table
        class="listItem"
      >
        <tbody>
          <tr>
            <th>
              Code
            </th>
            <td>
              PL
            </td>
          </tr>
        </tbody>
      </table>
      <table
        class="listItem"
      >
        <tbody>
          <tr>
            <th>
              Short name
            </th>
            <td>
              PLoko
            </td>
          </tr>
        </tbody>
      </table>
      <table
        class="listItem"
      >
        <tbody>
          <tr>
            <th>
              URL
            </th>
            <td>
              <a
                href="portloko.dhis2.org"
                rel="noreferrer"
                target="_blank"
              >
                Link
              </a>
            </td>
          </tr>
        </tbody>
      </table>
      <table
        class="listItem"
      >
        <tbody>
          <tr>
            <th>
              Contact
            </th>
            <td>
              Johnny
            </td>
          </tr>
        </tbody>
      </table>
      <table
        class="listItem"
      >
        <tbody>
          <tr>
            <th>
              Email
            </th>
            <td>
              portloko@dhis2.org
            </td>
          </tr>
        </tbody>
      </table>
      <table
        class="listItem"
      >
        <tbody>
          <tr>
            <th>
              Address
            </th>
            <td>
              Port Loko 1
            </td>
          </tr>
        </tbody>
      </table>
      <table
        class="listItem"
      >
        <tbody>
          <tr>
            <th>
              Phone
            </th>
            <td>
              123-456-7890
            </td>
          </tr>
        </tbody>
      </table>
      <table
        class="listItem"
      >
        <tbody>
          <tr>
            <th>
              Longitude
            </th>
            <td>
              -11.419745
            </td>
          </tr>
        </tbody>
      </table>
      <table
        class="listItem"
      >
        <tbody>
          <tr>
            <th>
              Latitude
            </th>
            <td>
              8.103933
            </td>
          </tr>
        </tbody>
      </table>
      <table
        class="listItem"
      >
        <tbody>
          <tr>
            <th>
              ID
            </th>
            <td>
              portlokoid
            </td>
          </tr>
        </tbody>
      </table>
      <table
        class="listItem"
      >
        <tbody>
          <tr>
            <th>
              Comment
            </th>
            <td>
              This is the comment
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Org unit profile (location details) renders formatted dates if featureType is POINT 1`] = `
<div>
  <div
    class="info"
    data-test="org-unit-info"
  >
    <h3>
      Port Loko
    </h3>
    <div
      class="level"
    >
      <svg
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6 1v4H4v2h6V6h4v4h-4V8H4v4h6v-1h4v4h-4v-2H3.5a.5.5 0 01-.492-.41L3 12.5V5H2V1zm7 11h-2v2h2zm0-5h-2v2h2zM5 2H3v2h2z"
          fill="currentColor"
        />
      </svg>
      Level
      :
       
      District (2)
    </div>
    <div
      class="level"
    >
      <svg
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6 1v4H4v2h6V6h4v4h-4V8H4v4h6v-1h4v4h-4v-2H3.5a.5.5 0 01-.492-.41L3 12.5V5H2V1zm7 11h-2v2h2zm0-5h-2v2h2zM5 2H3v2h2z"
          fill="currentColor"
        />
      </svg>
      Parent
      : 
      Sierra Leone
    </div>
    <div
      class="desc"
    >
      The district of Port Loko
    </div>
    <div
      class="list"
    >
      <table
        class="listItem"
      >
        <tbody>
          <tr>
            <th>
              Code
            </th>
            <td>
              PL
            </td>
          </tr>
        </tbody>
      </table>
      <table
        class="listItem"
      >
        <tbody>
          <tr>
            <th>
              Short name
            </th>
            <td>
              PLoko
            </td>
          </tr>
        </tbody>
      </table>
      <table
        class="listItem"
      >
        <tbody>
          <tr>
            <th>
              Opening date
            </th>
            <td>
              1970-01-01
            </td>
          </tr>
        </tbody>
      </table>
      <table
        class="listItem"
      >
        <tbody>
          <tr>
            <th>
              Closed date
            </th>
            <td>
              2021-06-09
            </td>
          </tr>
        </tbody>
      </table>
      <table
        class="listItem"
      >
        <tbody>
          <tr>
            <th>
              URL
            </th>
            <td>
              <a
                href="portloko.dhis2.org"
                rel="noreferrer"
                target="_blank"
              >
                Link
              </a>
            </td>
          </tr>
        </tbody>
      </table>
      <table
        class="listItem"
      >
        <tbody>
          <tr>
            <th>
              Contact
            </th>
            <td>
              Johnny
            </td>
          </tr>
        </tbody>
      </table>
      <table
        class="listItem"
      >
        <tbody>
          <tr>
            <th>
              Email
            </th>
            <td>
              portloko@dhis2.org
            </td>
          </tr>
        </tbody>
      </table>
      <table
        class="listItem"
      >
        <tbody>
          <tr>
            <th>
              Address
            </th>
            <td>
              Port Loko 1
            </td>
          </tr>
        </tbody>
      </table>
      <table
        class="listItem"
      >
        <tbody>
          <tr>
            <th>
              Phone
            </th>
            <td>
              123-456-7890
            </td>
          </tr>
        </tbody>
      </table>
      <table
        class="listItem"
      >
        <tbody>
          <tr>
            <th>
              Longitude
            </th>
            <td>
              -11.419745
            </td>
          </tr>
        </tbody>
      </table>
      <table
        class="listItem"
      >
        <tbody>
          <tr>
            <th>
              Latitude
            </th>
            <td>
              8.103933
            </td>
          </tr>
        </tbody>
      </table>
      <table
        class="listItem"
      >
        <tbody>
          <tr>
            <th>
              ID
            </th>
            <td>
              portlokoid
            </td>
          </tr>
        </tbody>
      </table>
      <table
        class="listItem"
      >
        <tbody>
          <tr>
            <th>
              Comment
            </th>
            <td>
              This is the comment
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Org unit profile (location details) renders metadata attributes 1`] = `
<div>
  <div
    class="info"
    data-test="org-unit-info"
  >
    <h3>
      Port Loko
    </h3>
    <div
      class="level"
    >
      <svg
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6 1v4H4v2h6V6h4v4h-4V8H4v4h6v-1h4v4h-4v-2H3.5a.5.5 0 01-.492-.41L3 12.5V5H2V1zm7 11h-2v2h2zm0-5h-2v2h2zM5 2H3v2h2z"
          fill="currentColor"
        />
      </svg>
      Level
      :
       
      District (2)
    </div>
    <div
      class="level"
    >
      <svg
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6 1v4H4v2h6V6h4v4h-4V8H4v4h6v-1h4v4h-4v-2H3.5a.5.5 0 01-.492-.41L3 12.5V5H2V1zm7 11h-2v2h2zm0-5h-2v2h2zM5 2H3v2h2z"
          fill="currentColor"
        />
      </svg>
      Parent
      : 
      Sierra Leone
    </div>
    <div
      class="desc"
    >
      The district of Port Loko
    </div>
    <div
      class="list"
    >
      <table
        class="listItem"
      >
        <tbody>
          <tr>
            <th>
              Code
            </th>
            <td>
              PL
            </td>
          </tr>
        </tbody>
      </table>
      <table
        class="listItem"
      >
        <tbody>
          <tr>
            <th>
              Short name
            </th>
            <td>
              PLoko
            </td>
          </tr>
        </tbody>
      </table>
      <table
        class="listItem"
      >
        <tbody>
          <tr>
            <th>
              URL
            </th>
            <td>
              <a
                href="portloko.dhis2.org"
                rel="noreferrer"
                target="_blank"
              >
                Link
              </a>
            </td>
          </tr>
        </tbody>
      </table>
      <table
        class="listItem"
      >
        <tbody>
          <tr>
            <th>
              Contact
            </th>
            <td>
              Johnny
            </td>
          </tr>
        </tbody>
      </table>
      <table
        class="listItem"
      >
        <tbody>
          <tr>
            <th>
              Email
            </th>
            <td>
              portloko@dhis2.org
            </td>
          </tr>
        </tbody>
      </table>
      <table
        class="listItem"
      >
        <tbody>
          <tr>
            <th>
              Address
            </th>
            <td>
              Port Loko 1
            </td>
          </tr>
        </tbody>
      </table>
      <table
        class="listItem"
      >
        <tbody>
          <tr>
            <th>
              Phone
            </th>
            <td>
              123-456-7890
            </td>
          </tr>
        </tbody>
      </table>
      <table
        class="listItem"
      >
        <tbody>
          <tr>
            <th>
              Longitude
            </th>
            <td>
              -11.419745
            </td>
          </tr>
        </tbody>
      </table>
      <table
        class="listItem"
      >
        <tbody>
          <tr>
            <th>
              Latitude
            </th>
            <td>
              8.103933
            </td>
          </tr>
        </tbody>
      </table>
      <table
        class="listItem"
      >
        <tbody>
          <tr>
            <th>
              ID
            </th>
            <td>
              portlokoid
            </td>
          </tr>
        </tbody>
      </table>
      <table
        class="listItem"
      >
        <tbody>
          <tr>
            <th>
              Comment
            </th>
            <td>
              This is the comment
            </td>
          </tr>
        </tbody>
      </table>
      <table
        class="listItem"
      >
        <tbody>
          <tr>
            <th>
              NGO ID
            </th>
            <td>
              ddASDd2312
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Org unit profile (location details) renders org unit group memberships 1`] = `
<div>
  <div
    class="info"
    data-test="org-unit-info"
  >
    <h3>
      Port Loko
    </h3>
    <div
      class="level"
    >
      <svg
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6 1v4H4v2h6V6h4v4h-4V8H4v4h6v-1h4v4h-4v-2H3.5a.5.5 0 01-.492-.41L3 12.5V5H2V1zm7 11h-2v2h2zm0-5h-2v2h2zM5 2H3v2h2z"
          fill="currentColor"
        />
      </svg>
      Level
      :
       
      District (2)
    </div>
    <div
      class="level"
    >
      <svg
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6 1v4H4v2h6V6h4v4h-4V8H4v4h6v-1h4v4h-4v-2H3.5a.5.5 0 01-.492-.41L3 12.5V5H2V1zm7 11h-2v2h2zm0-5h-2v2h2zM5 2H3v2h2z"
          fill="currentColor"
        />
      </svg>
      Parent
      : 
      Sierra Leone
    </div>
    <div
      class="desc"
    >
      The district of Port Loko
    </div>
    <div
      class="list"
    >
      <table
        class="listItem"
      >
        <tbody>
          <tr>
            <th>
              Facility Ownership
            </th>
            <td>
              Public facilities
            </td>
          </tr>
        </tbody>
      </table>
      <table
        class="listItem"
      >
        <tbody>
          <tr>
            <th>
              Facility Type
            </th>
            <td>
              CHC
            </td>
          </tr>
        </tbody>
      </table>
      <table
        class="listItem"
      >
        <tbody>
          <tr>
            <th>
              Code
            </th>
            <td>
              PL
            </td>
          </tr>
        </tbody>
      </table>
      <table
        class="listItem"
      >
        <tbody>
          <tr>
            <th>
              Short name
            </th>
            <td>
              PLoko
            </td>
          </tr>
        </tbody>
      </table>
      <table
        class="listItem"
      >
        <tbody>
          <tr>
            <th>
              URL
            </th>
            <td>
              <a
                href="portloko.dhis2.org"
                rel="noreferrer"
                target="_blank"
              >
                Link
              </a>
            </td>
          </tr>
        </tbody>
      </table>
      <table
        class="listItem"
      >
        <tbody>
          <tr>
            <th>
              Contact
            </th>
            <td>
              Johnny
            </td>
          </tr>
        </tbody>
      </table>
      <table
        class="listItem"
      >
        <tbody>
          <tr>
            <th>
              Email
            </th>
            <td>
              portloko@dhis2.org
            </td>
          </tr>
        </tbody>
      </table>
      <table
        class="listItem"
      >
        <tbody>
          <tr>
            <th>
              Address
            </th>
            <td>
              Port Loko 1
            </td>
          </tr>
        </tbody>
      </table>
      <table
        class="listItem"
      >
        <tbody>
          <tr>
            <th>
              Phone
            </th>
            <td>
              123-456-7890
            </td>
          </tr>
        </tbody>
      </table>
      <table
        class="listItem"
      >
        <tbody>
          <tr>
            <th>
              Longitude
            </th>
            <td>
              -11.419745
            </td>
          </tr>
        </tbody>
      </table>
      <table
        class="listItem"
      >
        <tbody>
          <tr>
            <th>
              Latitude
            </th>
            <td>
              8.103933
            </td>
          </tr>
        </tbody>
      </table>
      <table
        class="listItem"
      >
        <tbody>
          <tr>
            <th>
              ID
            </th>
            <td>
              portlokoid
            </td>
          </tr>
        </tbody>
      </table>
      <table
        class="listItem"
      >
        <tbody>
          <tr>
            <th>
              Comment
            </th>
            <td>
              This is the comment
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Org unit profile (location details) renders with minimal properties 1`] = `
<div>
  <div
    class="info"
    data-test="org-unit-info"
  >
    <div
      class="list"
    >
      <table
        class="listItem"
      >
        <tbody>
          <tr>
            <th>
              Email
            </th>
            <td>
              johnny@dhis2.org
            </td>
          </tr>
        </tbody>
      </table>
      <table
        class="listItem"
      >
        <tbody>
          <tr>
            <th>
              ID
            </th>
            <td>
              portloko123
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;
